# ollama-oneshot-q

./: .env.example  .gitignore  README.md  pyproject.toml  skill.md.template
oneshot_q/: main.py  setup_tool.py
