[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-oneshot-q"
version = "0.1.0"
description = "A context-free, disposable CLI assistant"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ollama",
    "python-dotenv",
]

[project.scripts]
q = "oneshot_q.main:main"
oneshot-setup = "oneshot_q.setup_tool:main"
